fix fill screen on ios devices

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2402,8 +2402,13 @@ html {
 .sign-inner {
   display: flex;
   min-height: 100vh;
+  height: 100vh;
   align-items: center;
-  min-height: --webkit-fill-available;
+}
+@supports (-webkit-touch-callout: none) {
+  .sign-inner {
+    min-height: --webkit-fill-available;
+  }
 }
 
 .sign-content {
