--- a/scss/pages/auth.scss
+++ b/scss/pages/auth.scss
@@ -3,8 +3,12 @@
 .sign-inner {
   display: flex;
   min-height: 100vh;
+  height: 100vh;
   align-items: center;
-  min-height: --webkit-fill-available;
+
+  @supports (-webkit-touch-callout: none) {
+    min-height: --webkit-fill-available;
+  }
 }
 
 .sign-content {
